--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dotenv": "16.0.3",
     "express": "4.18.1",
     "knex": "^2.1.0",
-    "pg": "8.9.0"
+    "pg": "8.9.0",
+    "unleash-client": "^3.18.0"
   },
   "devDependencies": {
     "@jest/globals": "28.1.2",
@@ -34,8 +35,8 @@
     "eslint-plugin-import": "2.26.0",
     "jest": "29.4.1",
     "mocha": "10.2.0",
-    "nodemon": "2.0.16",
+    "nodemon": "^3.1.0",
     "sqlite": "4.1.1",
-    "sqlite3": "5.0.8"
+    "sqlite3": "^5.1.7"
   }
 }
